--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "html-to-pdf-api",
-  "version": "6.0.0",
-  "description": "Universal HTML/URL to PDF & Screenshot API with template engine.",
+  "version": "7.0.0",
+  "description": "Universal HTML/URL to PDF & Screenshot API with template engine, digital signatures, and enterprise security.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node test_api.js"
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bwip-js": "^4.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^21.0.0",
     "qrcode": "^1.5.4",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
