feat: v7.1.0 — browser pool, job queue, PDF compression, metadata, thumbnails, email, cloud storage
New features:
- bcrypt password hashing for admin authentication
- XSS prevention via sanitize-html middleware
- PDF compression (Ghostscript/qpdf/pdf-lib, 30-70% reduction)
- PDF metadata read/write (title, author, subject, keywords)
- Thumbnail generation from PDF pages
- Browser pool with round-robin allocation for parallel processing
- In-memory job queue with priority and status tracking
- Email delivery via SMTP (nodemailer)
- S3-compatible cloud storage integration

New endpoints:
- POST /compress-pdf
- GET/POST /pdf-metadata
- POST /thumbnail
- POST /send-email
- POST /queue, GET /jobs/:id, GET /queue/stats

New files:
- src/middleware/sanitizer.js
- src/routes/enhanced.js
- src/services/cloudStorage.js
- src/services/email.js
- src/services/pdfMetadata.js
- src/services/queue.js
- src/services/thumbnail.js

Modified:
- Dockerfile (added ghostscript)
- docker-compose.yml (v7.1.0, new env vars)
- browser.js (rewritten with pool support)
- pdfUtils.js (added compression)
- adminAuth.js (bcrypt support)
- pdf.js (metadata injection)
- admin.js (async login, new system info)
- app.js (sanitizer middleware)
- README.md (complete rewrite)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   html-to-pdf-api:
     build: .
-    image: bagose/html-to-pdf-api:7.0.0
+    image: bagose/html-to-pdf-api:7.1.0
     container_name: html-to-pdf-api
     restart: unless-stopped
     ports:
@@ -22,6 +22,24 @@ services:
       - WEBHOOK_MAX_RETRIES=${WEBHOOK_MAX_RETRIES:-3}
       - WEBHOOK_RETRY_DELAY_MS=${WEBHOOK_RETRY_DELAY_MS:-3000}
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+      - BROWSER_POOL_SIZE=${BROWSER_POOL_SIZE:-1}
+      - QUEUE_CONCURRENCY=${QUEUE_CONCURRENCY:-3}
+      # Email (optional)
+      - SMTP_HOST=${SMTP_HOST:-}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_SECURE=${SMTP_SECURE:-false}
+      - SMTP_USER=${SMTP_USER:-}
+      - SMTP_PASS=${SMTP_PASS:-}
+      - SMTP_FROM=${SMTP_FROM:-}
+      # Cloud Storage (optional)
+      - STORAGE_PROVIDER=${STORAGE_PROVIDER:-local}
+      - STORAGE_ENDPOINT=${STORAGE_ENDPOINT:-}
+      - STORAGE_BUCKET=${STORAGE_BUCKET:-}
+      - STORAGE_REGION=${STORAGE_REGION:-us-east-1}
+      - STORAGE_ACCESS_KEY=${STORAGE_ACCESS_KEY:-}
+      - STORAGE_SECRET_KEY=${STORAGE_SECRET_KEY:-}
+      - STORAGE_PATH_PREFIX=${STORAGE_PATH_PREFIX:-}
+      - STORAGE_KEEP_LOCAL=${STORAGE_KEEP_LOCAL:-true}
     volumes:
       - pdf_output:/app/output
       - pdf_data:/app/data
